--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -197,10 +197,10 @@
                         </label> -->
                         <mat-checkbox #modalChecked (click)="saveSelection()" class="example-margin container-checkbox" >Don't show again</mat-checkbox>
                     
-                        <div class="modal-content">
+                        <div class="modal-content" style="height: auto">
                             <mat-tab-group style="background-color: white" >
-                                <mat-tab label="Instructions"> <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="tutorial" style="width: 100%"> </mat-tab>
-                                <mat-tab label="Tutorial"> <div [innerHTML]="tinderInstruction | safe: 'html'" style=" padding: 15px"></div></mat-tab>
+                                <mat-tab label="Tutorial"> <img *ngFor="let path of VIDEO_PATH" [src]="path" alt="tutorial" style="width: 100%"> </mat-tab>
+                                <mat-tab label="Instructions"> <div [innerHTML]="tinderInstruction | safe: 'html'" style=" padding: 15px"></div></mat-tab>
                             </mat-tab-group>                             
                         </div>
                         <button class="btn btn-raised close-modal" (click)="showModalVideo=false">close</button>
