--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -7,7 +7,10 @@
     (click)="editTextWithEditor();openSettings = !openSettings;">
     <mat-icon class="full-icon" style="font-size: 25px;">edit</mat-icon>
 </button>
-<div class="paragram-mobile" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
+
+<div class="paragram-desktop" *ngIf="currentPage == 1 && template== 'tinder' ; else regularTemplate" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
+<ng-template #regularTemplate><div class="paragram-mobile" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div></ng-template>
+
 <div cdkDrag>
     <ckeditor *ngIf="openSettings && bmxClientPageOverview" id="txtTexto" class="ckeditorcev"
         style="animation: fadeIn 0.5s ease forwards;" [ngModelOptions]="{standalone: true}"
