--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -1,12 +1,12 @@
 <div class="container mat-elevation-z4 bsr-mobile-container">
     <div class="row">
 
-        <mat-toolbar class="toolbar " fxLayoutAlign="space-between center" style=" text-align: center;border-bottom-left-radius: 6px;border-bottom-right-radius: 6px;
+        <mat-toolbar  class="toolbar " fxLayoutAlign="space-between center" style=" text-align: center;border-bottom-left-radius: 6px;border-bottom-right-radius: 6px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             ">
-            BI PROJECT: {{projectName}}
+           <span *ngIf="projectId !== 'an4057'"> BI PROJECT: {{projectName}} </span>
 
             <mat-icon *ngIf="isUserLogged" (click)="openDialog('displayInfo', '', '', '', '')"
                 style="color: white;background-color: #004684;  outline: none;cursor: pointer;">help</mat-icon>
@@ -15,22 +15,28 @@
 
         <div class="col container">
 
-
             <div *ngIf="!isUserLogged && !isUserLeaving && !isBSROpen" id="login">
 
                 <div id="login-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
 
                     <div id="login-form">
 
-
-
                         <img class="logo" src="./assets/img/NAMEPAGE_LOGO-01.svg">
                         <br>
-                        <div class="title secondary-text">Welcome to the NamePage<sup style="font-size: 10px;">TM</sup>
+                       <div *ngIf="projectId !== 'an4057' else ant">
+                          <div class="title secondary-text">Welcome to the NamePage<sup style="font-size: 10px;">TM</sup>
                             for Project </div>
-                        <div class="title secondary-text" style="color: #004684;">
-                            {{projectName}}
-                        </div>
+                          <div class="title secondary-text" style="color: #004684;">
+                              {{projectName}}
+                          </div>
+                       </div>
+                        <ng-template #ant>
+                            <div class="title secondary-text">Welcome to the NamePage<sup style="font-size: 10px;">TM</sup>
+                              for </div>
+                            <div class="title secondary-text" style="color: #004684;">
+                              Project AZD5305
+                            </div>
+                        </ng-template>
                         <div class="mat-small secondary-text">Please enter your information below to continue.
                         </div>
 
@@ -84,7 +90,6 @@
 
 
             <div *ngIf="isUserLogged" fxLayout="column" fxLayoutAlign="center center" id="login">
-
                 <br>
                 <div class="mat-subheading-1">Name Suggestions: {{newNames.length}}</div>
                 <mat-card class="names-list-card">
