--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -63,7 +63,7 @@
   display: none;
 }
 .container{
-  max-width: 2000px !important;
+  // max-width: 2000px !important;
 }
 .slide-box {
   // width: 2000px;
