answear save user

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -211,7 +211,7 @@
                         </button>
                     </div>
                     <app-tinder [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode" (launchPathModal)="setPath($event)" [survey]="true"
-                        [bmxClientPageOverview]="bmxClientPageOverview"></app-tinder>
+                        [bmxClientPageOverview]="bmxClientPageOverview" (autoSave)="autoSave()"></app-tinder>
                 </div>
                 <!-- END TINDER  🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥 -->
 
