--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -86,56 +86,65 @@
 
     <!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="bmxItem.componentSettings[0].columnWidth"></mat-slider><p>{{bmxItem.componentSettings[0].columnWidth}}</p> -->
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
-
     <div>
-        <button (click)="selectedIndex = '';editSingleTableCells = false" class="add-column" matTooltip="cancel" matTooltipPosition="above"
+        <button (click)="selectedIndex = ''" class="add-column" matTooltip="cancel" matTooltipPosition="above"
             *ngIf="i === selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">check_circle</mat-icon>
         </button>
-        <button (click)="selectedIndex = i;editSingleTableCells = false" class="add-column" matTooltip="insert test names" matTooltipPosition="above"
-            *ngIf="i !== selectedIndex" mat-icon-button>
-            <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
+        <button (click)="undo(); editSingleTableCells = false" class="add-column" matTooltip="undo last change" matTooltipPosition="above"
+            mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
         </button>
-        <button (click)="insertTextColumn();editSingleTableCells = false" class="add-column" matTooltip="add text column" matTooltipPosition="above"
+        <button (click)="deleteRows = !deleteRows; editSingleTableCells = false" [ngClass]="(!deleteRows)?'add-column':'add-column-active'"
+            matTooltip="delete rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
+        </button>
+        <button (click)="setPronunciation(); editSingleTableCells = false" class="add-column" matTooltip="speech" matTooltipPosition="above"
+            mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">mic</mat-icon>
+        </button>        
+        <button (click)="insertTextColumn(); editSingleTableCells = false" class="add-column" matTooltip="add text column" matTooltipPosition="above"
             mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
         </button>
-        <button (click)="insertCommentBoxColumn();editSingleTableCells = false" class="add-column" matTooltip="add comments column"
+
+        <!-- <button (click)="insertRadioColumn()" class="add-column"  matTooltip="add radio column"
+        matTooltipPosition="above" mat-icon-button aria-label="ranking">
+        <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
+        </button> -->
+        <button (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column" matTooltip="add comments column"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
         </button>
-        <button (click)="insertRow();editSingleTableCells = false" class="add-column" matTooltip="insert row" matTooltipPosition="above"
+        <button (click)="insertRow(); editSingleTableCells = false" class="add-column" matTooltip="insert row" matTooltipPosition="above"
             mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
+        </button>
+        
+        <button (click)="dragRows = !dragRows; editSingleTableCells = false" [ngClass]="(!dragRows)?'add-column':'add-column-active'"
+            matTooltip="drag rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
+        </button>       
+        <button (click)="isColumnResizerOn = !isColumnResizerOn; editSingleTableCells = false"
+            [ngClass]="(!isColumnResizerOn)?'add-column':'add-column-active'" matTooltip="columns width"
+            matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
         </button>
         <button (click)="editSingleTableCells = !editSingleTableCells"
             [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit table cells"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
         </button>
-        <button (click)="dragRows = !dragRows;editSingleTableCells = false" [ngClass]="(!dragRows)?'add-column':'add-column-active'"
-            matTooltip="drag rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
-        </button>
-        <button (click)="deleteRows = !deleteRows;editSingleTableCells = false" [ngClass]="(!deleteRows)?'add-column':'add-column-active'"
-            matTooltip="delete rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
-        </button>
-        <button (click)="isColumnResizerOn = !isColumnResizerOn;editSingleTableCells = false"
-            [ngClass]="(!isColumnResizerOn)?'add-column':'add-column-active'" matTooltip="columns width"
-            matTooltipPosition="above" mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
-        </button>
-        <button (click)="undo();editSingleTableCells = false" class="add-column" matTooltip="undo last change" matTooltipPosition="above"
-            mat-icon-button aria-label="ranking">
-            <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
+        <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column" matTooltip="insert test names" matTooltipPosition="above"
+            *ngIf="i !== selectedIndex" mat-icon-button>
+            <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
         <button *ngIf="uploadImagesIcon" (click)="toggleImageUploadBox(); editSingleTableCells = false" class="add-column" matTooltip="uploadImages"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
         </button>
-
     </div>
+    
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 
@@ -153,31 +162,28 @@
     width: 1024px;
     height: 54px;" cdkDragHandle> </div>
     <div style="text-align: center;">
-        <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
+        <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
         <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
     </div>
-    <div>
+    <div style="display: flex;justify-content: center;justify-items: center;">
+
         <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
             <mat-label>Copy & Paste TEST NAMES</mat-label>
-            <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput"
+            <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" (paste)="onPaste()"
                 placeholder=""></textarea>
         </mat-form-field>
+
     </div>
 
     <hr>
-    <div style="display: flex;flex-direction: row;justify-content: space-around;gap: 30px;">
-
+    <div style="display: flex;flex-direction: row;justify-content: space-around;gap: 10px;">
         <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryName"
-            [value]="bmxItem.componentSettings[0].categoryName" [placeholder]="'Category Name'"
-            style="font-size: 20px;color: #324395;padding-bottom: 7px;padding-left: 10px; width: 20%">
+            [value]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name"
+            style="font-size: 20px;color: #324395;padding-bottom: 7px;padding-left: 10px;width: 20%">
         <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
             [value]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description"
-            style="font-size: 20px;color: #ee7f25;padding-bottom: 4px;padding-left: 7px; width: 20%">
-
-        <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Logos</mat-checkbox>
-
-       
-         
+            style="font-size: 20px;color: #ee7f25;padding-bottom: 4px;padding-left: 7px;width: 20%">
+        <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
         <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;">
             <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
                 {{bmxItem.componentSettings[0].minRule}}</div>
@@ -190,54 +196,13 @@
             <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
                 style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
         </div>
-
-
     </div>
 
     <hr>
-    <!-- IMAGE UPLOADER CODE -->
-    <!-- <div style="display: flex;flex-direction: row;justify-content: space-between;gap: 30px;">
-        <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload style="display: none;"
-            multiple accept="image/*">
-
-
-        <button mat-raised-button style="background-color: #003180;color:white;margin: -3px -173px 0px 29px;"
-            (click)="fileUpload.click()">
-            Select files to upload
-        </button>
-        <button *ngIf="IMAGES_UPLOADED.length > 0" mat-raised-button
-            style="background-color: #ee7f25;color:white; margin-right: 33px;" (click)="uploadAllImages()">
-            Upload Files
-        </button>
-    </div>
-    <div style="display: flex;flex-direction: row; gap:10; padding-top: 10px;">
-
-        <div class="template-list" [dragula]="'draggableBag'" [(dragulaModel)]="IMAGES_UPLOADED"
-            style="display: flex;flex-direction: column; overflow-y: scroll;width: 100%;justify-content: center;">
-            <div *ngFor="let template of IMAGES_UPLOADED; let imgIndex = index" [ngClass]="(imgIndex%2==0)?'red':'blue'"
-                class="image-row">
-
-                <div class="image-cell">
-                    <div style="font-size: 25px;color: #003180;width: 40px;">{{imgIndex + 1}}</div>
-                    <img [src]="template.FileContent" [width]="logoWidth">
-                </div>
-
-                <input type="text" [value]="template.FileName">
-                <p>{{template.FileType}}</p>
-                <button (dblclick)="deleteImage(imgIndex)" mat-icon-button style="background-color: #ffffff;"
-                    matTooltip="double click to delete " matTooltipPosition="above">
-                    <mat-icon style="color: #e20000;">delete</mat-icon>
-                </button>
-
-            </div>
-        </div>
-    </div>
-
-
-
-    <hr> -->
     <div
         style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;align-items: center;">
+
+
         <div style="display: flex;flex-direction: column;">
             <div style="font-size: 12px;color: #48535e;">TYPE NEW CRITERIA</div>
             <div style="display: flex;">
@@ -258,15 +223,21 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
+
+
         </div>
+
         <div>
             <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
             <br>
+
             <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-                {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="5" max="10">
+                {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0" max="10">
                 10 <br>
             </div>
             <label for="volume">{{rankingScaleValue}}</label>
+
+
         </div>
 
         <div>
@@ -388,7 +359,6 @@
         </div>
         <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;">
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
-
     </div>
     <div class="scroller-style main-container" style="margin-bottom: 45px;" [dragula]="(dragRows)?'DRAGGABLE_ROW':''"
         [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);">
