--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.scss
@@ -80,7 +80,7 @@
     /* Modal Content/Box */
     .modal-content {
         background-color: rgba(0, 0, 0, 0);
-        top: 10%;
+        top: 0%;
         margin: 2% auto; /* 15% from the top and centered */
         // margin-left: 15%;
         // padding: 20px;
@@ -101,7 +101,7 @@
         // margin-bottom: 5px;
         position: relative;
     
-        top: 12%;
+        // top: 12%;
         left: 42.5%;
         width: 15%;
         padding: 0px 5px;
@@ -134,7 +134,7 @@
 .container-checkbox {
     display: block;
     position: relative;
-    top: 10%;
+    top: 5%;
     // padding-left: 35px;
     // margin-top: 2.5%;
     margin-left: 15%;
