ajuste color iconos tinder

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.html
@@ -227,7 +227,7 @@
                     </mat-icon>
 
                     <div style="display: flex; justify-content: center">
-                        <mat-icon (click)="voteName('negative')" style="font-size: 50px;color: #ee252f;cursor: pointer;width: 100%">
+                        <mat-icon (click)="voteName('negative')" style="font-size: 50px;color: #e800d7;cursor: pointer;width: 100%">
                             highlight_off</mat-icon>
 
                         <mat-icon (click)="voteName('positive')" style="font-size: 50px;color: #00cd38;cursor: pointer;width: 100%">
