--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -139,7 +139,7 @@
             *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
         </button>
-        <button *ngIf="uploadImagesIcon" (click)="toggleImageUploadBox(); editSingleTableCells = false" class="add-column" matTooltip="uploadImages"
+        <button (click)="toggleImageUploadBox(); editSingleTableCells = false" class="add-column" matTooltip="uploadImages"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">collections</mat-icon>
         </button>
