--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -273,7 +273,7 @@
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
     </div>
     <!--  [dragula]="draggableBag"  -->
-    <div class="scroller-style main-container" cdkDropList (cdkDropListDropped)="checkDragEvetn(bmxItem.componentText)"
+    <div class="scroller-style main-container" cdkDropList (cdkDropListDropped)="checkDragEvetn($event)"
         [cdkDropListAutoScrollDisabled]="false" [cdkDropListLockAxis]="'y'"
         [dragula]="(dragRows)?'DRAGGABLE_ROW':(rankingType == 'dragAndDrop')?draggableBag:''"
         [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);">
