--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -90,7 +90,7 @@
                     <!-- modal end -->
                   
                     <app-rating-scale [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
-                        [bmxClientPageOverview]="bmxClientPageOverview" (launchPathModal)="setPath($event)"></app-rating-scale>
+                        [bmxClientPageOverview]="bmxClientPageOverview" (launchPathModal)="setPath($event)" (autoSave)="autoSave()"></app-rating-scale>
 
                 </div>
                 <!-- END STARS SCALE 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽 -->
@@ -135,7 +135,7 @@
                     <!-- modal end -->                   
 
                     <app-image-rank-drag [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
-                        [bmxClientPageOverview]="bmxClientPageOverview" (launchPathModal)="setPath($event)"></app-image-rank-drag>
+                        [bmxClientPageOverview]="bmxClientPageOverview" (launchPathModal)="setPath($event)" (autoSave)="autoSave()"></app-image-rank-drag>
                 </div>
                 <!-- END RANK DRAG 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽 -->
 
@@ -168,7 +168,7 @@
 
                     <app-image-rate-scale [bmxItem]="bmxItem" [i]="i"
                         [bmxClientPageDesignMode]="bmxClientPageDesignMode"
-                        [bmxClientPageOverview]="bmxClientPageOverview" (launchPathModal)="setPath($event)"></app-image-rate-scale>
+                        [bmxClientPageOverview]="bmxClientPageOverview" (launchPathModal)="setPath($event)"  (autoSave)="autoSave()"></app-image-rate-scale>
                 </div>
                 <!-- END IMAGE SCALE 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀 -->
 
