revision autosave plantillas 21 03 23

--- a/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -100,7 +100,7 @@
                 <div *ngIf="bmxItem.componentType === 'ranking-scale'" class="paragraph">
 
                     <app-rank-scale [bmxItem]="bmxItem" [i]="i" [bmxClientPageDesignMode]="bmxClientPageDesignMode"
-                        [bmxClientPageOverview]="bmxClientPageOverview"></app-rank-scale>
+                        [bmxClientPageOverview]="bmxClientPageOverview" (autoSave)="autoSave()"></app-rank-scale>
                 </div>
                 <!-- END RANK SCALE 😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭😭 -->
 
