--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -3,15 +3,15 @@
     flex-direction: row-reverse;
     justify-content: end;
     top: -30px;
-    right: 50px;border: 2px dashed #324395;padding-right: 10px;background: #ffffffd9;
-    position: absolute;height: 54px;align-items: center;padding-right: 38px;">
+    right: 5px;border: 2px dashed #324395;padding-right: 10px;background: #ffffffd9;
+    position: absolute;height: 54px;align-items: center">
 
     <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
     <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="" style="    display: flex;
-    flex-direction: row;
-    justify-content: start;background: #ffffffd9;
-    gap: 0px;position: absolute;left: -740px;z-index: 1;border: 2px dashed #324395;">
+        flex-direction: row;
+        justify-content: start;background: #ffffffd9;
+        gap: 0px;position: absolute;left: -748px;z-index: 1;border: 2px dashed #324395;">
         <!-- NAME CANDIATES -->
         <div style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">candidates
